load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = glob(
        [
            "*.go",
            "*.h",
        ],
        exclude = ["*_test.go"],
    ),
    cdeps = [
        "@com_github_nghialv_clibs//libvips:libvips_library",
    ],
    cgo = True,
    importpath = "github.com/davidbyttow/govips/v2",
    visibility = ["//visibility:public"],
)
